@@ -5,19 +5,19 @@ import edu.shmonin.university.model.*;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.test.context.jdbc.Sql;
+import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import org.springframework.test.jdbc.JdbcTestUtils;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @SpringJUnitConfig(TestConfig.class)
-@Sql({"classpath:Schema.sql", "classpath:test-data.sql"})
+@DirtiesContext(classMode = DirtiesContext.ClassMode.BEFORE_EACH_TEST_METHOD)
 class JdbcLectureDaoTest {
 
     @Autowired
@@ -38,12 +38,12 @@ class JdbcLectureDaoTest {
         teacher1.setAddress("address-1");
         teacher1.setBirthDate(LocalDate.of(1980, 1, 1));
         teacher1.setScientificDegree(ScientificDegree.DOCTOR);
-        teacher1.setCourses(Arrays.asList(new Course("course-1"), new Course("course-2")));
-        teacher1.setVacations(Arrays.asList(new Vacation(LocalDate.of(2021, 1, 1), LocalDate.of(2021, 2, 1)),
+        teacher1.setCourses(List.of(new Course("course-1"), new Course("course-2")));
+        teacher1.setVacations(List.of(new Vacation(LocalDate.of(2021, 1, 1), LocalDate.of(2021, 2, 1)),
                 new Vacation(LocalDate.of(2021, 3, 1), LocalDate.of(2021, 4, 1))));
         var expected = new Lecture(LocalDate.of(2021, 1, 1),
                 new Course("course-1"),
-                Arrays.asList(new Group("group-1"), new Group("group-2")),
+                List.of(new Group("group-1"), new Group("group-2")),
                 new Audience(1, 10),
                 new Duration(LocalTime.of(9, 0, 0), LocalTime.of(10, 0, 0)),
                 teacher1);
@@ -65,28 +65,28 @@ class JdbcLectureDaoTest {
         teacher1.setAddress("address-1");
         teacher1.setBirthDate(LocalDate.of(1980, 1, 1));
         teacher1.setScientificDegree(ScientificDegree.DOCTOR);
-        teacher1.setCourses(Arrays.asList(new Course("course-1"), new Course("course-2")));
-        teacher1.setVacations(Arrays.asList(new Vacation(LocalDate.of(2021, 1, 1), LocalDate.of(2021, 2, 1)),
+        teacher1.setCourses(List.of(new Course("course-1"), new Course("course-2")));
+        teacher1.setVacations(List.of(new Vacation(LocalDate.of(2021, 1, 1), LocalDate.of(2021, 2, 1)),
                 new Vacation(LocalDate.of(2021, 3, 1), LocalDate.of(2021, 4, 1))));
         var lecture1 = new Lecture(LocalDate.of(2021, 1, 1),
                 new Course("course-1"),
-                Arrays.asList(new Group("group-1"), new Group("group-2")),
+                List.of(new Group("group-1"), new Group("group-2")),
                 new Audience(1, 10),
                 new Duration(LocalTime.of(9, 0, 0), LocalTime.of(10, 0, 0)),
                 teacher1);
         var lecture2 = new Lecture(LocalDate.of(2021, 1, 2),
                 new Course("course-1"),
-                Arrays.asList(new Group("group-1"), new Group("group-2"), new Group("group-3")),
+                List.of(new Group("group-1"), new Group("group-2"), new Group("group-3")),
                 new Audience(1, 10),
                 new Duration(LocalTime.of(9, 0, 0), LocalTime.of(10, 0, 0)),
                 teacher1);
         var lecture3 = new Lecture(LocalDate.of(2021, 1, 1),
                 new Course("course-1"),
-                Collections.singletonList(new Group("group-3")),
+                List.of(new Group("group-3")),
                 new Audience(2, 20),
                 new Duration(LocalTime.of(11, 0, 0), LocalTime.of(12, 0, 0)),
                 teacher1);
-        var expected = Arrays.asList(lecture1, lecture2, lecture3);
+        var expected = List.of(lecture1, lecture2, lecture3);
 
         var actual = jdbcLectureDao.getAll();
 
@@ -111,12 +111,12 @@ class JdbcLectureDaoTest {
         course1.setId(1);
         var course2 = new Course("course-2");
         course2.setId(2);
-        teacher.setCourses(Arrays.asList(course1, course2));
+        teacher.setCourses(List.of(course1, course2));
         var vacation1 = new Vacation(LocalDate.of(2021, 1, 1), LocalDate.of(2021, 2, 1));
         vacation1.setId(1);
         var vacation2 = new Vacation(LocalDate.of(2021, 3, 1), LocalDate.of(2021, 4, 1));
         vacation2.setId(2);
-        teacher.setVacations(Arrays.asList(vacation1, vacation2));
+        teacher.setVacations(List.of(vacation1, vacation2));
         var group1 = new Group("group-1");
         group1.setId(1);
         var group2 = new Group("group-2");
@@ -126,7 +126,7 @@ class JdbcLectureDaoTest {
         var duration = new Duration(LocalTime.of(9, 0, 0), LocalTime.of(10, 0, 0));
         duration.setId(1);
         var lecture = new Lecture(LocalDate.of(2021, 1, 1),
-                course1, Arrays.asList(group1, group2), audience, duration, teacher);
+                course1, List.of(group1, group2), audience, duration, teacher);
 
         jdbcLectureDao.create(lecture);
 
@@ -155,7 +155,7 @@ class JdbcLectureDaoTest {
         vacation1.setId(1);
         var vacation2 = new Vacation(LocalDate.of(2021, 3, 1), LocalDate.of(2021, 4, 1));
         vacation2.setId(2);
-        teacher.setVacations(Arrays.asList(vacation1, vacation2));
+        teacher.setVacations(List.of(vacation1, vacation2));
         var group1 = new Group("group-1");
         group1.setId(1);
         var group2 = new Group("group-2");
@@ -165,7 +165,7 @@ class JdbcLectureDaoTest {
         var duration = new Duration(LocalTime.of(9, 0, 0), LocalTime.of(10, 0, 0));
         duration.setId(1);
         var lecture = new Lecture(LocalDate.of(2021, 1, 1),
-                course, Arrays.asList(group1, group2), audience, duration, teacher);
+                course, List.of(group1, group2), audience, duration, teacher);
         lecture.setId(1);
 
         jdbcLectureDao.update(lecture);
